# Real-time-data-stream-processor

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.ini
docs/: ARCHITECTURE.md  PERFORMANCE.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/Analytics/: AnalyticsPanel.tsx  BollingerWidget.tsx  LatencyWidget.tsx  MACDChart.tsx  QueueWidget.tsx  RSIChart.tsx  ThroughputWidget.tsx  VWAPWidget.tsx
frontend/components/Chart/: ChartContainer.tsx  ChartPanel.tsx  ChartToolbar.tsx  PriceTicker.tsx
frontend/components/OrderBook/: BidAskHeader.tsx  OrderBookDepth.tsx  OrderBookPanel.tsx  PressureBar.tsx  TradesTape.tsx
frontend/components/Sidebar/: Sidebar.tsx
frontend/components/StatusBar/: StatusBar.tsx
frontend/lib/: types.ts
frontend/lib/mock/: marketSimulator.ts  metricsSimulator.ts  orderbookSimulator.ts  tradesSimulator.ts
frontend/lib/websocket/: useDataStreams.ts
frontend/store/: marketStore.ts  metricsStore.ts  orderbookStore.ts
include/: Analytics.h  Config.h  LockFreeQueue.h  Logger.h  MarketDataFeed.h  MatchingEngine.h  OrderBook.h  StreamProcessor.h
src/: Analytics.cpp  Config.cpp  Logger.cpp  MarketDataFeed.cpp  MatchingEngine.cpp  OrderBook.cpp  StreamProcessor.cpp  main.cpp
tests/: TestRunner.h  benchmark.cpp  tests.cpp
